--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ nav {
 
 .typedText {
 	text-transform: capitalize;
-	color: var(--text-color-third);
+	color: var(--first-color);
 }
 
 .featured-text-info {
